backport to java11
Signed-off-by: Xinyu Hao <haoxinyu@amazon.com>